--- a/src/components/Dialogs/DialogItem/DialogsItem.module.css
+++ b/src/components/Dialogs/DialogItem/DialogsItem.module.css
@@ -1,3 +1,12 @@
+.dialogs {
+    display: grid;
+    grid-template-columns: 2fr 10fr;
+}
+
+.active {
+
+}
+
 .itemDialogs {
     padding: 15px;
 }
@@ -5,5 +14,9 @@
 .itemDialogs .active {
     color: brown;
     text-decoration: none;
-    
 }
+
+.messages {
+    padding: 15px;
+}
+
