--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,11 +1,10 @@
-.post {
-    padding: 10px;
+
+
+.content {
+    grid-area: c;
+    background-color: yellowgreen;
 }
 
-.addText {
-    padding: 10px;
-}
-h3 {
-    padding: 15px;
-    margin: 0 auto;
+.item {
+    color: ;
 }
