--- a/src/components/Dialogs/Message/Message.module.css
+++ b/src/components/Dialogs/Message/Message.module.css
@@ -1,22 +1,19 @@
-.dialogs {
-    display: grid;
-    grid-template-columns: 2fr 10fr;
-}
+/*.dialogs {*/
+/*    display: grid;*/
+/*    grid-template-columns: 2fr 10fr;*/
+/*}*/
 
-.active {
+/*.active {*/
 
-}
+/*}*/
 
-.itemDialogs {
-    padding: 15px;
-}
+/*.itemDialogs {*/
+/*    padding: 15px;*/
+/*}*/
 
-.itemDialogs .active {
-    color: brown;
-    text-decoration: none;
-}
+/*.itemDialogs .active {*/
+/*    color: brown;*/
+/*    text-decoration: none;*/
+/*}*/
 
-.messages {
-    padding: 15px;
-}
-
+/*.*/
