--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,10 +1,11 @@
-
-
-.content {
-    grid-area: c;
-    background-color: yellowgreen;
+.post {
+    padding: 10px;
 }
 
-.item {
-    color: ;
+.addText {
+    padding: 10px;
+}
+h3 {
+    padding: 15px;
+    margin: 0 auto;
 }
