--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,10 +1,11 @@
-
+.content img {
+    width:600px;
+}
 
 .content {
     grid-area: c;
-    background-color: yellowgreen;
 }
 
-.item {
-    color: ;
-}
+/*.item {*/
+
+/*}*/
